--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,13 +17,20 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      # 安装node
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
-          cache: pnpm
-      - run: pnpm ci
+          node-version: 18
+          cache: 'pnpm'
+      # 安装 pnpm
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: 7
+
       - name: Build
-        run: pnpm run build
+        run: pnpm install && npm run build
+
       - uses: actions/configure-pages@v2
       - uses: actions/upload-pages-artifact@v1
         with:
