--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,10 +32,15 @@ jobs:
       - name: Build
         run: pnpm install && pnpm run build
 
-      - uses: actions/configure-pages@v2
-      - uses: actions/upload-pages-artifact@v1
-        with:
-          path: docs/.vitepress/dist
+      # 部署
       - name: Deploy
-        id: deployment
-        uses: actions/deploy-pages@v1
+        uses: JamesIves/github-pages-deploy-action@releases/v3
+        with:
+          # GitHub 密钥
+          # ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          # 指定仓库
+          REPOSITORY_NAME: fangguangyu/library
+          # GitHub Pages 读取的分支
+          BRANCH: pages
+          # 静态文件所在目录
+          FOLDER: dist
